--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -17,7 +17,7 @@
   "features": {
     "khatmah": {
       "title": "ختمة",
-      "description": "تنظيم وتتبع تقدمك في قراءة القرآن"
+      "description": "تنظيم قراءة القرآن بشكل تعاوني"
     },
     "calendar": {
       "title": "التقويم الهجري",
@@ -180,6 +180,21 @@
     "help": "مساعدة",
     "contact": "اتصل بنا",
     "rights": "جميع الحقوق محفوظة."
+  },
+  "about": {
+    "title": "حول حسنة",
+    "dedication": {
+      "title": "إهداء",
+      "text": "هذا العمل اهداء الى ثواب المرحومة الحاجة صبيحة ثجيل (ام عبد الباقي) جدتي التي علمتني الصبر والإيمان وكانت مثالاً للعطاء والتفاني، التي دعاؤها كان دائماً معي في كل خطوة من حياتي. لروحها الرحمة والمغفرة.",
+      "reciteFatiha": "الفاتحة على روحها الطيبة"
+    },
+    "contact": {
+      "title": "اتصل بنا",
+      "description": "للاقتراحات أو الملاحظات أو الأسئلة، يرجى التواصل معنا على"
+    },
+    "version": {
+      "title": "الإصدار"
+    }
   },
   "language": {
     "en": "English",
