--- a/frontend/src/locales/fa.json
+++ b/frontend/src/locales/fa.json
@@ -190,6 +190,21 @@
     "contact": "تماس",
     "rights": "تمامی حقوق محفوظ است."
   },
+  "about": {
+    "title": "درباره حسنه",
+    "dedication": {
+      "title": "تقدیم",
+      "text": "این کار تقدیم می‌شود به روح مرحومه حاجه صبیحه ثجیل (ام عبدالباقی)، مادربزرگم که صبر و ایمان را به من آموخت و نمونه‌ای از بخشش و فداکاری بود. دعاهای او همیشه در هر قدم از زندگی‌ام با من بود. روحش شاد و قرین رحمت الهی باد.",
+      "reciteFatiha": "برای شادی روح پاکش فاتحه بخوانید"
+    },
+    "contact": {
+      "title": "تماس",
+      "description": "برای پیشنهادات، بازخورد یا سؤالات، لطفاً با ما تماس بگیرید:"
+    },
+    "version": {
+      "title": "نسخه"
+    }
+  },
   "language": {
     "en": "English",
     "ar": "العربية",
