--- a/frontend/src/locales/ku.json
+++ b/frontend/src/locales/ku.json
@@ -265,6 +265,21 @@
     "contact": "پەیوەندی",
     "rights": "هەموو مافەکان پارێزراون."
   },
+  "about": {
+    "title": "دەربارەی حەسەنە",
+    "dedication": {
+      "title": "پێشکەشکردن",
+      "text": "ئەم کارە پێشکەشە بە یادی خوالێخۆشبوو حاجە صبیحة ثجیل (دایکی عبدالباقي)، داپیرەم کە فێری ئارامگرتن و باوەڕی کردم و نموونەی بەخشین و دڵسۆزی بوو. دوعاکانی هەمیشە لەگەڵ من بوون لە هەر هەنگاوێکی ژیانمدا. با گیانی بە ئارامی بحەسێتەوە.",
+      "reciteFatiha": "فاتیحە بۆ گیانی پاکی بخوێنن"
+    },
+    "contact": {
+      "title": "پەیوەندی",
+      "description": "بۆ پێشنیار، فیدباک، یان پرسیار، تکایە پەیوەندیمان پێوە بکەن لە:"
+    },
+    "version": {
+      "title": "وەشان"
+    }
+  },
   "language": {
     "en": "English",
     "ar": "العربية",
