--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -188,8 +188,8 @@
     "title": "حول حسنة",
     "dedication": {
       "title": "إهداء",
-      "text": "هذا العمل اهداء الى ثواب المرحومة الحاجة صبيحة ثجيل (ام عبد الباقي) جدتي التي علمتني الصبر والإيمان وكانت مثالاً للعطاء والتفاني، التي دعاؤها كان دائماً معي في كل خطوة من حياتي. لروحها الرحمة والمغفرة.",
-      "reciteFatiha": "الفاتحة على روحها الطيبة"
+      "text": "هذا العمل اهداء الى ثواب المرحومة الحاجة صبيحة ثجيل (ام عبد الباقي) جدتي التي علمتني الصبر والإيمان وكانت مثالاً للعطاء والتفاني، التي دعاؤها كان دائماً معي في كل خطوة من حياتي. والى جدي مهدي عبد العباس الذي لم اتوفق لرؤيته, لروحهما الرحمة والمغفرة",
+      "reciteFatiha": "الفاتحة على روحهما الطيبة"
     },
     "contact": {
       "title": "اتصل بنا",
@@ -476,7 +476,7 @@
     "calculationError": "خطأ في حساب العمر. يرجى المحاولة مرة أخرى.",
     "gregorian": "التقويم الميلادي",
     "hijri": "التقويم الهجري",
-    "additionalInfo": "إضافية الولادة",
+    "additionalInfo": "معلومات الولادة",
     "seconds": "ثواني",
     "milliseconds": "مللي ثانية",
     "ageFormats": "عمرك بصيغ مختلفة",
