--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -188,8 +188,8 @@
     "title": "حول حسنة",
     "dedication": {
       "title": "إهداء",
-      "text": "هذا العمل اهداء الى ثواب المرحومة الحاجة صبيحة ثجيل (ام عبد الباقي) جدتي التي علمتني الصبر والإيمان وكانت مثالاً للعطاء والتفاني، التي دعاؤها كان دائماً معي في كل خطوة من حياتي. والى جدي مهدي عبد العباس الذي لم اتوفق لرؤيته, لروحهما الرحمة والمغفرة",
-      "reciteFatiha": "الفاتحة على روحهما الطيبة"
+      "text": "هذا العمل إهداءٌ إلى روح المرحومة الحاجة صبيحة ثجيل (أم عبد الباقي)، جدتي التي غرست في قلبي منذ طفولتي معاني الصبر والإيمان، وكانت مثالًا للعطاء والحنان، والتي لم يفارقني دعاؤها في كل محطات حياتي.\nوإلى روح جدي مهدي عبد العباس، الذي حرمتني الأقدار من لقائه والتعرف إليه، لكنني كبرت أحمل له محبةً فطريةً وشوقًا لم يخبُ يوماً.\nأسأل الله أن يتغمّدهما بواسع رحمته ومغفرته ويسكنهما فسيح جناته.",
+      "reciteFatiha": "الفاتحة على أرواحهم الطيبة"
     },
     "contact": {
       "title": "اتصل بنا",
@@ -425,7 +425,8 @@
     "positionUnavailable": "معلومات الموقع غير متوفرة.",
     "timeout": "انتهت مهلة محاولة الحصول على الموقع.",
     "locationNote": "يجب تمكين خدمة الموقع لعرض اتجاه القبلة",
-    "qibla": "القبلة"
+    "qibla": "القبلة",
+    "calculatingQibla": "جاري حساب اتجاه القبلة..."
   },
   "common": {
     "save": "حفظ",
@@ -460,7 +461,7 @@
     "dayOfYear": "يوم السنة",
     "moonPhase": "طور القمر عند الميلاد",
     "season": "موسم الميلاد",
-    "zodiac": "برج الزودياك",
+    "zodiac": "برجك",
     "year": "سنة",
     "years": "سنوات",
     "month": "شهر",
