--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -88,7 +88,9 @@
     "khatmahs": "الختمات",
     "publicKhatmahs": "الختمات العامة",
     "quranKhatmah": "ختمة القرآن بدون صورة",
-    "searchPublic": "البحث في الختمات العامة..."
+    "searchPublic": "البحث في الختمات العامة...",
+    "loading": "جارٍ تحميل الختمات...",
+    "pleaseWait": "يرجى الانتظار بينما نقوم بتحميل الختمات..."
   },
   "khatmahDetail": {
     "title": "تفاصيل الختمة",
