--- a/frontend/src/locales/ku.json
+++ b/frontend/src/locales/ku.json
@@ -214,7 +214,9 @@
     "completed": "تەواوکراوە",
     "noKhatmahs": "هیچ خەتمێک نەدۆزرایەوە",
     "noKhatmahsMatch": "هیچ خەتمێک نییە کە لەگەڵ گەڕانەکەت بگونجێت بۆ",
-    "noKhatmahsAvailable": "هێشتا هیچ خەتمێک بەردەست نییە"
+    "noKhatmahsAvailable": "هێشتا هیچ خەتمێک بەردەست نییە",
+    "loading": "باركردنی خەتمەکان...",
+    "pleaseWait": "تکایە چاوەڕوان بە کاتێک خەتمەکان باردەکرێن..."
   },
   "khatmahDetail": {
     "title": "وردەکاری خەتم",
